2010-10-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnimap.el (nnimap-wait-for-response): If the user hits `C-g', kill
	the process, too.

2010-10-09  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* spam.el (gnus-summary-mode-map): Bind to "$".  Suggested by Russ
	Allbery.

	* shr.el: Rework the way things are indented by <li> slightly.

	* gnus.el (gnus-group-set-parameter): Fix typo.

	* nnimap.el: Start implementing QRESYNC support.

2010-10-09  Julien Danjou  <julien@danjou.info>

	* nnir.el (nnir-engines): Fix too many arguments.

2010-10-09  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnmail.el (nnmail-expiry-target-group): Say that every expiry target
	group is the "last", so that the backends like nnfolder actually save
	their folders.

	* nnimap.el (nnimap-open-connection): If we have gnutls loaded, then
	try to use that for the tls stream.
	(nnimap-retrieve-group-data-early): Rework the marks code to heed
	UIDVALIDITY and find out which groups are read-only and not.
	(nnimap-get-flags): Use the same marks parsing code as the rest of
	nnimap.

2010-10-09  Julien Danjou  <julien@danjou.info>

	* nnir.el (nnir-read-parm): Fix call to gnus-completing-read.

	* gnus-gravatar.el (gnus-gravatar-transform-address): Error errors when
	retrieving gravatars.

	* shr.el (shr-table-corner): Add.
	(shr-table-line): Add.
	(shr-insert-table-ruler): Use the above defcustoms to insert tables.

2010-10-08  Julien Danjou  <julien@danjou.info>

	* mm-decode.el (mm-text-html-renderer): Add mm-shr in choice list.

2010-10-08  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-util.el (gnus-alist-pull): Rename `gnus-pull'.

	* gnus-sum.el (gnus-mark-article-as-unread)
	(gnus-summary-mark-article-as-unread, gnus-summary-remove-bookmark)
	(gnus-summary-set-bookmark): Use it.

	* gnus-msg.el (gnus-setup-message): Use it.

	* gnus-demon.el (gnus-demon-remove-handler): Use it.

	* gnus.el (gnus-group-remove-parameter): Use it.

	* gnus-group.el (gnus-group-make-web-group): Use it.
